--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,12 @@
 {
-  "extends": "next/core-web-vitals"
+  "extends": "next/core-web-vitals",
+  "rules": {
+    "quotes": [2, "single"],
+    "indent": [2, 2, {
+      "ignoredNodes": ["TemplateLiteral"]
+    }],
+    "semi": [2, "always"],
+    "no-trailing-spaces": "error",
+    "arrow-parens": [2, "always"]
+  }
 }
