--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "nextjs-firebase",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": ">=15.0.0",
+    "npm": "<=5.0.0"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
