--- a/package.json
+++ b/package.json
@@ -17,13 +17,13 @@
   "dependencies": {
     "classnames": "^2.3.1",
     "firebase": "8.9.1",
-    "next": "12.1.0",
-    "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "next": "^12.2.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.2",
-    "@testing-library/react": "^12.1.4",
+    "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "chance": "^1.1.8",
     "eslint": "8.11.0",
