--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,6 +7,24 @@
     }],
     "semi": [2, "always"],
     "no-trailing-spaces": "error",
-    "arrow-parens": [2, "always"]
+    "arrow-parens": [2, "always"],
+    "padding-line-between-statements": [
+      "error",
+      { "blankLine": "always", "prev": "let", "next": "if" },
+      { "blankLine": "always", "prev": "let", "next": "function" },
+      { "blankLine": "always", "prev": "let", "next": "try" },
+      { "blankLine": "always", "prev": "let", "next": "return" },
+      { "blankLine": "always", "prev": "const", "next": "if" },
+      { "blankLine": "always", "prev": "const", "next": "function" },
+      { "blankLine": "always", "prev": "const", "next": "try" },
+      { "blankLine": "always", "prev": "const", "next": "return" },
+      { "blankLine": "always", "prev": "import", "next": "export" },
+      { "blankLine": "always", "prev": "import", "next": "function" },
+      { "blankLine": "always", "prev": "import", "next": "class" },
+      { "blankLine": "always", "prev": "function", "next": "function" },
+      { "blankLine": "always", "prev": "function", "next": "export" },
+      { "blankLine": "always", "prev": "export", "next": "export" },
+      { "blankLine": "always", "prev": "export", "next": "function" }
+    ]
   }
 }
