--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "engines": {
     "node": ">=15.0.0",
-    "npm": "<=5.0.0"
+    "npm": ">=5.0.0"
   },
   "scripts": {
     "dev": "next dev",
